# boat-data-platform

./: AGENTS.md  README.md  package-lock.json  package.json
docs/: 2026-06-30-live-instrument-inventory.md  2026-06-30-masterbus-live.md  2026-06-30-masterbus-tooling.md  2026-06-30-pi5nvme-setup-summary.md  2026-06-30-picanm-setup-summary.md  2026-07-03-boat-discovery-and-decoder-inventory.md  2026-07-03-decoding-and-postgres-status.md  2026-07-03-edge-backend-migration-plan.md  2026-07-03-migration-plan-review.md  2026-07-03-other-pi5-boot-failure-diagnosis.md  2026-07-03-pi5nvme-incident-and-picanm-status.md  2026-07-03-pi5nvme-incident-diagnosis.md  2026-07-04-backfill-strategy.md  2026-07-04-manuals-relevance-review.md  2026-07-04-source-attribution-inventory.md  2026-07-04-static-pgn-capability-matrix.md  2026-07-05-copy-merge-validation.md  README.md  limited-agent-next-task-runbook.md  llm-implementation-brief.md  picanm-offline-operations.md  plan.md  postgresql-end-state-migration.md  postgresql-storage-plan.md  rebuild-from-source-material.md  signalk-llm-source-map.md  starlink-lan-name-resolution.md  two-engine-state-plugin-plan.md
scripts/: analyzer-jsonl-to-n2k-copy.mjs  build-device-extraction-report.mjs  build-source-attribution-inventory.mjs  capture-alternator-observation.mjs  check-steady-state.sh  collect-masterbus-signalk-log.mjs  collect-signalk-to-timescale.mjs  collect-steady-state-health.mjs  compare-signalk-sources.mjs  db.mjs  import-n2k-v2-copy.mjs  (+5 more)
tools/n2k-rust-importer/: Cargo.toml  README.md
tools/n2k-rust-importer/src/: main.rs
(+102 files in other folders)
